# fastapi-deepagent-vue

./: .dockerignore  .env.api_key.example  .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  model_config.yaml  nginx.conf  pyproject.toml  setup.bat
backend/: main.py  wechat_bot.py
backend/api/markdown_rag/: rag_config.yaml  rag_setting.py  save_VectorStore.py
backend/api/routers/: chat.py  checkpoints.py  files.py  memory_and_skill.py  rag_pipeline.py  settings.py  threads.py
backend/api/schemas/: __init__.py  checkpoint.py  error.py  files.py  interrupt.py  rag_pipeline.py  request.py  response.py  settings.py
backend/cli/: get_message_history.py  interact.py  query_state.py
backend/config/: env_settings.py  logger.py  observability.py
backend/core/: main_agent.py
backend/preview/: 1-计篇_chunks_preview.md
backend/rag_pipeline/: clean_file.py  pdf-load.py
docs/: API模块.md  Core核心组件模块.md  SubAgent子代理管理模块.md  项目框架.md
docs/frontend/: 00-总览与架构.md  01-API层.md  02-Chat核心模块.md  03-Files文件管理模块.md  04-Settings设置模块.md  05-RAG管理模块.md  06-Shared公共组件.md  07-Layout与辅助模块.md
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  split-pane-v3.d.ts  style.css
knowledge-base/: a.md  test.md
knowledge-base/Agent_Skills/: Best_practices.md  Evaluating-skill-output-quality.md  Optimizing_skill_descriptions.md  uv-add-deepagents-acp.md  ​ Specification.md
knowledge-base/Docker_doc/: docker_cli.md
knowledge-base/fast-api/: python 类型介绍.md  并发与 async&await.md  环境变量.md  虚拟环境.md
knowledge-base/fast_mcp/: overview.md
knowledge-base/workspace/: text_analyzer.py  复盘.md
knowledge-base/英语单词/: Lesson.md
my-tools/: bilibili_load.py  clean.py  image-ocr.py  pdf-a.py
my-tools/agent/: graph_compile.py  interact.py
notes/: api.md  environment.md  git-command.md  mermaid.md  server-ops.md
view_db/: start_chroma_server.py  view_chroma.py  view_sql.py
(+898 files in other folders)
