[project]
name = "index-rag-backend"
version = "0.1.0"
description = "Index RAG Backend - 基于 DeepAgents 的知识库检索 Agent"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-qwq>=0.2.0",
    "langchain-moonshot>=0.1.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "pymongo>=4.10.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "chromadb>=0.5.0",
    "fastmcp>=3.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "fastapi[standard]>=0.115.0",
    "websockets>=14.0",
    "aiosqlite>=0.20.0",
    "dashscope>=1.20.0",
    "langchain-openai>=0.3.0",
    "langchain-quickjs>=0.1.0",
    "langfuse>=2.0.0",
    "msgpack>=1.1.0",
    "ormsgpack>=1.8.0",
    "pydantic>=2.0.0",
    "langgraph-checkpoint-sqlite",
    "qrcode>=8.2",
    "wechatbot-sdk>=0.2.1",
    "langchain-linkup>=0.2.1",
    "deepagents-acp>=0.0.8",
    "markitdown[docx,pdf]>=0.1.6",
    "pdfplumber>=0.11.0",
    "rich>=15.0.0",
    "plotly>=6.8.0",
    "sqlite-utils>=3.39",
    "datasette>=0.65.2",
    "matplotlib>=3.11.0",
    "docling>=2.111.0",
    "pymupdf4llm>=1.28.0",
    "uuid-utils>=0.16.2",
    "langchain-docling>=2.0.0",
    "langchain-unstructured>=1.0.1",
    "bilibili-api-python>=17.4.2",
    "llama-index>=0.14.23",
    "llama-index-readers-file>=0.6.0",
    "pymupdf>=1.28.0",
    "Pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
